<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindMyCar</string>
    <string name="find_my_car">FindMyCar</string>
    <string name="location_name">LocationName</string>
    <string name="coordinates">Get Coordinates</string>
    <string name="coordinates_gps">GPS</string>
    <string name="coordinates_map">Map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="map">Map</string>
    <string name="added">Added</string>
    <string name="transport_to_wear">Transport</string>
    <string name="transport_to_wear_title">Transport To Wear</string>
    <string name="introduction">Introduction</string>
    <string name="confirm">Confirm</string>
    <string name="location_name_empty">Location Name Can Not Be Empty</string>
    <string name="enable">Enable</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm to delete this?</string>
    <string name="confirm_yes">YES</string>
    <string name="confirm_no">NO</string>
    <string name="state_enalbe">Enable</string>
    <string name="state_disalbe">Disable</string>
    <string name="here">Car In Here</string>
    <string name="gps_close">GPS NOT OPEN</string>
    <string name="permission_message">You need to allow access to Location</string>
    <string name="banner_ad_unit_id">ca-app-pub-4805725849347372/3003128648</string>
    <string name="record_finish">Record Finish</string>
    <string name="positioning">Positioning</string>

</resources>