<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/location_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/etLocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/coordinates"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText" />
        
        <Button
            android:id="@+id/btGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:text="@string/coordinates_gps"
            android:textColor="#FFFFFF" />

         <Button
             android:id="@+id/btMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@drawable/button_selector"
             android:text="@string/coordinates_map"
             android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/latitude"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/etLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/longitude"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/etLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btConfirm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/confirm"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>